update to best practices and english, adding license

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-# Solar Mining Controller - Konfiguration
-# Kopiere diese Datei zu .env und trage deine Werte ein
+# Solar Mining Controller - Configuration
+# Copy this file to .env and fill in your values
+
+# Language Settings (CLI output language)
+# Supported: en (English), de (German)
+LANGUAGE=en
 
 # Excavator Miner
 EXCAVATOR_PATH=H:\miner\excavator.exe
