more improvements, switching to most profitable algo, better logs and monitoring

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,14 @@ STOP_CONFIRMATIONS_NEEDED=5
 # GPU Monitoring
 GPU_CHECK_ENABLED=True
 GPU_USAGE_THRESHOLD=10
+
+# Auto-Update Settings
+# AUTO_UPDATE_EXCAVATOR_STOP: If True, automatically stops Excavator when update is available, 
+#                              performs update, then script will restart it on next check.
+#                              If False, update is skipped when Excavator is running.
+AUTO_UPDATE_EXCAVATOR_STOP=False
+
+# AUTO_UPDATE_FORCE_STABLE: If True, downgrades prerelease versions (beta/rc) of huawei-solar 
+#                           to latest stable compatible version. If False, keeps prereleases.
+AUTO_UPDATE_FORCE_STABLE=False
+
